# better_crawl_saul

./: .gitignore  README.md  crawl_wiki_data.py  create_latexdiffs.py  filter_and_merge_crawled_wiki_data.py  filter_crawled_wiki_data.py  my_auto_filter.py  my_extract_diff.py  my_parse_latexdiff_doc_level.py  my_parse_latexdiff_sentence_level.py  parse_latex_diffs.py  pyproject.toml  requirements.txt
src/: crawler.py  settings.py  utils.py
tests/: test_utils.py
